# hexa-star-interpolation

./: README.md  interpolation.sln
interpolation/: CMakeLists.txt  ReadMe.txt  glut.h  interpolation.cpp  interpolation.vcxproj  interpolation.vcxproj.filters  point.h  primitives.cpp  primitives.h  shapes.cpp  shapes.h  stdafx.cpp  storage.cpp  storage.h  vertices.txt
